<resources>
    <string name="app_name">DermaScan</string>
    <string name="web_client_id">68342240626-c7skqi6gdmei2lbdb9hvcuqj9l8lqbj5.apps.googleusercontent.com</string>
    <string name="title_activity_up_img">UpImgActivity</string>
    <string name="image_story_content_desc">article card</string>
    <string name="fab_addarticle_content_desc">upload article button</string>
    <string name="uploaded_image_content_description">Gambar yang akan dikirim\n</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="enter_article_description">Deskripsi artikel</string>
    <string name="upload">Kirim</string>
    <string name="story_image_content_description">Gambar artikel\n</string>
    <string name="article_uploaded">Artikel terkirim\n</string>
    <string name="enter_article_title">Judul Artikel</string>
    <string name="persondesc">logo author</string>
    <string name="days_a_go">%1$s hari yang lalu</string>
    <string name="hours_a_go">%1$s jam yang lalu</string>
    <string name="minute_a_go">%1$s menit yang lalu</string>
    <string name="now">Sekarang</string>
    <string name="time_is_not_available">Waktu tidak tersedia</string>
    <string name="forum_created">Forum berhasil dibuat</string>
    <string name="error_empty_reply">reply kosong</string>
    <string name="add_forum">tombol tambah forum</string>
    <string name="enter_forum_title">Judul forum</string>
    <string name="enter_forum_description">Masukan detail pertanyaan</string>
    <string name="favorite_button">favorite button\n</string>
    <string name="favorite_deleted">berhasil dihapus dari daftar favorit</string>
    <string name="favorite_added">Berhasil ditambahkan ke daftar favorit</string>
    <string name="favorite_kosong">No favorite articles</string>
</resources>