<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.forumAdd.ForumAddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:title="Add Forum"
            app:titleTextColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            android:contentDescription="@string/uploaded_image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="188dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/camera"
            android:visibility="gone"
            android:textColor="@color/white"
            android:theme="@style/Button.Primary"
            app:layout_constraintBottom_toBottomOf="@id/galleryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/galleryButton" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="188dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:visibility="gone"
            android:theme="@style/Button.Primary"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_title"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cameraButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_forum_title"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                colorHint="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:outlineAmbientShadowColor="@color/blue"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_content"
            android:layout_width="377dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            app:hintTextColor="@color/blue"
            app:boxStrokeColor="@color/blue"
            android:hint="@string/enter_forum_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:textColor="@color/blue"
                android:textColorHint="@color/blue"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upload"
            android:layout_marginTop="80dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
