<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.articleAdd.ArticleAddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">



<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:id="@+id/toolbar"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="?attr/actionBarSize"-->
<!--            android:background="?attr/colorPrimary"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--            app:theme="@style/ToolbarTheme"-->
<!--            app:title="TaleNet"-->
<!--            app:titleTextColor="@color/white" />-->

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:contentDescription="@string/uploaded_image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/cameraButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="188dp"
            android:layout_height="59dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/camera"
            android:background="@drawable/circular_button"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/galleryButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/galleryButton" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="188dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            android:background="@drawable/circular_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_title"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cameraButton" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_title"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_article_title"
            colorHint="@color/blue"
            android:outlineAmbientShadowColor="@color/blue"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@+id/ed_add_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/galleryButton">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_add_content"
            android:layout_width="377dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/enter_article_description"
            colorHint="@color/blue"
            android:outlineAmbientShadowColor="@color/blue"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toTopOf="@id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_add_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="374dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:background="@drawable/circular_button"
            android:backgroundTint="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
